--- a/src/html/zhuce.html
+++ b/src/html/zhuce.html
@@ -74,11 +74,34 @@
                 <!-- <span class="glyphicon glyphicon-chevron-down xiala"></span> -->
             </div>
             <form class="form-item" action="../lib/zhuce.php" method="POST">
-                <label for="val-mobile">账户</label>
+                <label for="val-mobile">用户名</label>
                 <input type="text" id="username" placeholder="请输入您的用户名" name="username" style="margin-bottom: 20px;">
-                <div class="error-tip username">请输入您的用户名</div>
+                <div class="error-tip username"> </div>
                 <label for="val-email">邮箱</label>
                 <input type="email" id="email" placeholder="请输入邮箱" name="email">
+                <div class="error-tip-email" style="display: none">请输入正确的邮箱格式</div>
+                <script>
+                    $(function() {
+                        var email = $('#email');
+                        var error_tip_email = $('.error-tip-email')
+                        var reg = /^\w{6,}@[A-z0-9]{2,}\.[A-z]{2,}$/g;
+
+                        // var reg = / ^\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/g
+                        email.on('keyup', function() {
+                            // console.log($(this).val())
+                            if (reg.test($(this).val())) {
+                                console.log('正确');
+                                error_tip_email.css({
+                                    "display": 'none'
+                                });
+                            } else {
+                                error_tip_email.css({
+                                    "display": 'block'
+                                });
+                            }
+                        })
+                    })
+                </script>
                 <label for="val-vcode" style="margin-top:40px;"> 密码</label>
                 <input type="password" name="password" class="val-vcode disabled password" id="password" placeholder="请输入您的密码" maxlength="6">
                 <div id="btn-sms" class="btn-sms" style="margin-bottom:40px;">记住密码</div>
