--- a/src/html/zhuce.html
+++ b/src/html/zhuce.html
@@ -15,6 +15,30 @@
     <link rel="stylesheet" href="../css/zhuce.css">
     <script src="../../node_modules/jquery/dist/jquery.min.js"></script>
     <script src="../js/sy.js"></script>
+    <script>
+        $(function() {
+            $('#username').on('keyup', function() {
+                $.ajax({
+                    type: "get",
+                    url: "../lib/zhuce2.php",
+                    data: {
+                        'username': $(this).val()
+                    },
+                    dataType: "json",
+                    success: function(response) {
+                        // console.log(response);
+                        var chucuo = $('.chucuo');
+                        if (response.result) {
+                            chucuo.html(response.mes).css('color', 'red')
+                        } else {
+                            chucuo.html(response.mes).css('color', 'green')
+                        }
+                    }
+                });
+            })
+
+        })
+    </script>
 </head>
 
 <body>
@@ -74,10 +98,10 @@
                 <!-- <span class="glyphicon glyphicon-chevron-down xiala"></span> -->
             </div>
             <form class="form-item" action="../lib/zhuce.php" method="POST">
-                <label for="val-mobile">用户名</label>
-                <input type="text" id="username" placeholder="请输入您的用户名" name="username" style="margin-bottom: 20px;">
-                <div class="error-tip username"> </div>
-                <label for="val-email">邮箱</label>
+                <label for="username ">用户名</label>
+                <input type="text" id="username" placeholder="请输入您的用户名" name="username">
+                <span class="chucuo" style="display: inline-block;margin-bottom: 20px;"></span>
+                <label for="email">邮箱</label>
                 <input type="email" id="email" placeholder="请输入邮箱" name="email">
                 <div class="error-tip-email" style="display: none">请输入正确的邮箱格式</div>
                 <script>
@@ -85,8 +109,6 @@
                         var email = $('#email');
                         var error_tip_email = $('.error-tip-email')
                         var reg = /^\w{6,}@[A-z0-9]{2,}\.[A-z]{2,}$/g;
-
-                        // var reg = / ^\w+([-+.]\w+)*@\w+([-.]\w+)*\.\w+([-.]\w+)*$/g
                         email.on('keyup', function() {
                             // console.log($(this).val())
                             if (reg.test($(this).val())) {
@@ -176,7 +198,7 @@
         </section>
     </footer>
 
-    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+
     <script src="../../bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 </body>
 
