--- a/src/html/sy.html
+++ b/src/html/sy.html
@@ -37,7 +37,7 @@
                         var pic = JSON.parse(elm.pic);
                         template = `
                              <div class="col-md-3">
-                            <a href="xiangqing.html?id=${elm.id}">
+                            <a href="xiangqing.html?id=${elm.id}" style="color:black">
                             <img class="lazy" data-original="${pic[0].src}" alt="1">
                             <p>${elm.title}</p>
                             <p>
@@ -74,7 +74,7 @@
                     var pic = JSON.parse(elm.pic);
                     template = `
                              <div class="col-md-3">
-                            <a href="xiangqing.html?id=${elm.id}">
+                            <a href="xiangqing.html?id=${elm.id}" style="color:black">
                             <img class="lazy" data-original="${pic[0].src}" alt="1">
                             <p>${elm.title}</p>
                             <p>
@@ -111,7 +111,7 @@
                     var pic = JSON.parse(elm.pic);
                     template = `
                              <div class="col-md-3">
-                            <a href="xiangqing.html?id=${elm.id}">
+                            <a href="xiangqing.html?id=${elm.id}" style="color:black">
                             <img class="lazy" data-original="${pic[0].src}" alt="1">
                             <p>${elm.title}</p>
                             <p>
@@ -148,7 +148,7 @@
                     var pic = JSON.parse(elm.pic);
                     template = `
                              <div class="col-md-3">
-                            <a href="xiangqing.html?id=${elm.id}">
+                            <a href="xiangqing.html?id=${elm.id}" style="color:black">
                             <img class="lazy" data-original="${pic[0].src}" alt="1">
                             <p>${elm.title}</p>
                             <p>
